// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditForm> renders a form with the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          First Name
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          Last Name
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          Email address
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          Password
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="changePasswordButtonContainer"
    >
      <button
        class="changePasswordButton"
        classes="[object Object]"
        type="button"
      >
        <span>
          Change Password
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EditForm> renders a form without the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          First Name
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          Last Name
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          Email address
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          Current Password
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
  </div>
  <div
    class="newPassword"
  >
    <div
      class="root"
    >
      <span
        class="label"
      >
        New Password
      </span>
      <span
        class="root"
      >
        <span
          class="input"
        >
          <input
            class="input"
            name="newPassword"
            type="password"
            value=""
          />
        </span>
        <span
          class="before"
        />
        <span
          class="after"
        >
          <button
            type="button"
          >
            <span
              class="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        class="root"
      />
    </div>
  </div>
</DocumentFragment>
`;
